# robot_odyssey

./: README.md
drivers/ldrobot-lidar-ros2/ldlidar_component/: CMakeLists.txt
drivers/ldrobot-lidar-ros2/ldlidar_node/: CMakeLists.txt
drivers/ldrobot-lidar-ros2/ldlidar_node/launch/: ldlidar.launch.py
drivers/ldrobot-lidar-ros2/ldlidar_node/params/: ldlidar.yaml  slam_toolbox.yaml
velocity_pub/: CMakeLists.txt  package.xml
velocity_pub/launch/: four_ws_control.launch.py
velocity_pub/scripts/: robot_control.py
waver_description/: CMakeLists.txt  package.xml
waver_description/config/: nav.rviz  waver_robot_config.rviz  waver_robot_sim.yaml
waver_description/launch/: description.launch.py
waver_description/ros2_control/: waver_robot.ros2_control.xacro
waver_description/urdf/: camera.xacro  imu.xacro  lidar.xacro  util.xacro  waver.gazebo.xacro  waver.urdf  waver.xacro
waver_gazebo/: CMakeLists.txt  package.xml
waver_gazebo/config/: ekf.yaml  nav2_params.yaml
waver_gazebo/launch/: gazebo.launch.py
waver_gazebo/world/: coworking.sdf
waver_navigation/: CMakeLists.txt  package.xml
waver_navigation/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  tb3_sim.launch.py
yolov8_camera/: CMakeLists.txt  package.xml
yolov8_camera/launch/: launch_yolov8.launch.py
yolov8_camera/src/: yolov8_ros2_pt.py  yolov8_ros2_subscriber.py
