<?xml version="1.0"?>
<package format="3">
  <name>waver_gazebo</name>
  <version>1.0.0</version>
  <description>The waver_gazebo package</description>

  <maintainer email="gugomog3@gmail.com">Gustavo Gomez</maintainer>
  <author email="gugomog3@gmail.com">Gustavo Gomez</author>

  <license>Apache 2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies (if you need them) -->
  <!-- e.g. <build_depend>gazebo_ros</build_depend> -->

  <!-- Run-time dependencies -->
  <exec_depend>waver_description</exec_depend>
  <exec_depend>gz_msgs_vendor</exec_depend>
  <exec_depend>gz_plugin_vendor</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  

  <!-- If you have message/service definitions in this package, you’d add them here. -->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Optionally export other info here -->
  </export>
</package>
