<?xml version="1.0"?>
<package format="3">
  <name>waver_gazebo</name>
  <version>1.0.0</version>
  <description>The waver_gazebo package</description>

  <maintainer email="gugomog3@gmail.com">Gustavo Gomez</maintainer>
  <author email="gugomog3@gmail.com">Gustavo Gomez</author>

  <license>Apache 2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies (if you need them) -->
  <!-- e.g. <build_depend>gazebo_ros</build_depend> -->

  <!-- Run-time dependencies -->
  <exec_depend>waver_description</exec_depend>
  <exec_depend>gz_msgs_vendor</exec_depend>
  <exec_depend>gz_plugin_vendor</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  

  <!-- If you have message/service definitions in this package, you’d add them here. -->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Optionally export other info here -->
  </export>
</package>
